infrastructure/kitos-dev/kitos/services/dummy-kitos-api-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    easyhosting.io/service-reference: PubSub.Application.Api/Dockerfile
    easyhosting.io/service-unique-id: 7f5373ca-1518-4edf-931f-3785645935dc
    easyhosting.io/easy-hosting-domain-name: 7f5373ca-1518-4edf-931f-3785645935dc.kitos-dev.strongminds.easyhosting.strongminds.dev
  labels:
    app: dummy-kitos-api-1
  name: dummy-kitos-api-1
  namespace: kitos
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: dummy-kitos-api-1
  template:
    metadata:
      annotations:
        sidecar.opentelemetry.io/inject: "false"
      labels:
        app: dummy-kitos-api-1
    spec:
      containers:
      - env: []
        image: '{will be replaced by build pipeline}'
        name: dummy-kitos-api-1
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
            cpu: 1
          requests:
            memory: 128Mi
            cpu: 100m
      imagePullSecrets:
      - name: 90d73529-a238-405b-a079-3eea2e8e36e6
