infrastructure/kitos-dev/kitos/services/dummy-kitos-api-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-kitos-api-1
  namespace: kitos
spec:
  ports:
  - appProtocol: http
    name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: dummy-kitos-api-1
  type: ClusterIP
